# third-thoughts

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  findings.html  index.html  package.json  report.html  style.css
middens/: .gitignore  Cargo.toml  README.md
middens/docs/nlspecs/: 2026-04-04-python-bridge-nlspec.md  2026-04-05-python-techniques-batch1-nlspec.md  2026-04-05-python-techniques-batch2-nlspec.md  2026-04-06-python-techniques-batch3-nlspec.md  2026-04-06-python-techniques-batch4-nlspec.md
middens/middens-results/: burstiness.json  burstiness.md  correction-rate.json  correction-rate.md  diversity.json  diversity.md  entropy.json  entropy.md  markov.json  markov.md  thinking-divergence.json  thinking-divergence.md
middens/python/: requirements.txt
middens/python/techniques/: change_point_detection.py  convention_epidemiology.py  corpus_timeline.py  cross_project_graph.py  echo.py  ena_analysis.py  granger_causality.py  hsmm.py  information_foraging.py  lag_sequential.py  ncd_clustering.py  prefixspan_mining.py  process_mining.py  smith_waterman.py  spc_control_charts.py  survival_analysis.py  tpattern_detection.py  user_signal_analysis.py
middens/src/: lib.rs  main.rs  pipeline.rs  session.rs
middens/src/archive/: copy.rs  discover.rs  manifest.rs  mod.rs  parse.rs  plan.rs
middens/src/bridge/: embedded.rs  mod.rs  technique.rs  uv.rs
middens/src/classifier/: correction.rs  mod.rs  session_type.rs
middens/src/commands/: archive.rs  export.rs  interpret.rs  mod.rs
middens/src/corpus/: discovery.rs  manifest.rs  mod.rs
middens/src/fingerprint/: mod.rs
middens/src/output/: ascii.rs  json.rs  markdown.rs  mod.rs
middens/src/parser/: auto_detect.rs  claude_code.rs  codex.rs  gemini.rs  mod.rs  openclaw.rs  pi.rs
middens/src/report/: mod.rs
middens/src/storage/: mod.rs  (+1 more)
middens/tests/: cucumber.rs
(+311 files in other folders)
