[package]
name = "middens"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "AI agent session log analyzer — archaeological extraction of behavioral patterns from coding agent transcripts"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
toml = "0.8"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
cucumber = "0.22"
futures = "0.3"

[[test]]
name = "cucumber"
harness = false
