[package]
name = "middens"
version = "0.0.1-beta.0"
edition = "2024"
rust-version = "1.88"
description = "AI agent session log analyzer — archaeological extraction of behavioral patterns from coding agent transcripts"
license = "AGPL-3.0-or-later"
readme = "README.md"
authors = ["El-Fitz <8971906+El-Fitz@users.noreply.github.com>"]
repository = "https://github.com/Lightless-Labs/third-thoughts"
homepage = "https://github.com/Lightless-Labs/third-thoughts"
keywords = ["ai", "agents", "observability", "analysis", "cli"]
categories = ["command-line-utilities", "development-tools", "science"]

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
toml = "0.8"
anyhow = "1"
thiserror = "2"
which = "7"
tempfile = "3"
polars = { version = "0.46", features = ["parquet"] }
uuid7 = "1"

[dev-dependencies]
cucumber = "0.22"
futures = "0.3"

[[test]]
name = "cucumber"
harness = false
